Initial commit for School Outreach Scheme
General fixes, and start of schools page. This has a new CSS file based on the event info page.

--- a/event-info.html
+++ b/event-info.html
@@ -28,6 +28,7 @@
             <a href="/#team">Team</a>
             <a href="/tickets">Tickets</a>
             <a href="event-info.html">Event Information</a>
+            <a href="schools.html">Schools</a>
         </div>
     </div>
 
@@ -35,8 +36,10 @@
         <div class="overlay"></div>
         <div class="navigation">
             <div class="nav-left">
-                <img src="./images/htmlogo.png"/>
-                <!-- <h1>HTM</h1> -->
+                <a href='.'>
+                    <img src="./images/htmlogo.png"/>
+                </a>
+                    <!-- <h1>HTM</h1> -->
             </div>
             <div class="nav-right">
                 <div class="nav-right-content">
@@ -45,6 +48,7 @@
                     <a href="/#team">Team</a>
                     <a href="/tickets">Tickets</a>
                     <a href="event-info.html">Event Information</a>
+                    <a href="schools.html">Schools</a>
                     <div class="nav-mobile"></div>
                 </div>
             </div>
@@ -500,7 +504,7 @@
     }
 }
     </style>
-    <a href="https://discordapp.com/invite/ZtkhBm">
+    <a href="https://discord.gg/HackTheMidlands">
         <div _ngcontent-c0="" class="discord" id="circle">
           <div _ngcontent-c0="" class="discord--box ng-trigger ng-trigger-discord" id="discord_thing" style="transform: scale(0);">
             <iframe _ngcontent-c0="" class="ng-tns-c0-0" allowtransparency="true" frameborder="0" height="500" src="https://discordapp.com/widget?id=304313295165325323&amp;theme=dark" width="350"></iframe>
