--- a/safeguarding/index.html
+++ b/safeguarding/index.html
@@ -2,7 +2,7 @@
 <head>
     <!--Stylesheets-->
 
-    <title>HTM | Safeguarding</title>
+    <title>Safeguarding</title>
     <link type="text/css" rel="stylesheet" href="../css/event-info-main.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="http://hackthemidlands.com/images/hackthemidlands-facebook.jpg" />
