--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <a href="#team">Team</a>
             <a href="/tickets">Get Tickets</a>
             <a href="event-info.html">Event Information</a>
+            <a href="schools.html">Schools</a>
         </div>
       </div>
 
@@ -69,6 +70,7 @@
                                 <a href="#team">Team</a>
                                 <a href="/tickets">Get Tickets</a>
                                 <a href="event-info.html">Event Information</a>
+                                <a href="schools.html">Schools</a>
                             </div>
                             <div class="nav-mobile"></div>
                             <a id="mlh-badge" class="badge" href="https://mlh.io/seasons/eu-2020/events"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2020/mlh-trust-badge-2020-white.svg" alt="Major League Hacking 2019 Hackathon Season"></a>
