--- a/schools.html
+++ b/schools.html
@@ -6,7 +6,7 @@
 <head>
     <!--Stylesheets-->
 
-    <title>School Outreach Scheme</title>
+    <title>School Outreach Initiative</title>
     <link type="text/css" rel="stylesheet" href="./css/schools.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="http://hackthemidlands.com/images/hackthemidlands-facebook.jpg" />
