Updated contact details
Now contains Twilio number which redirects to DSPs. Also general bug fixes

--- a/safeguarding/index.html
+++ b/safeguarding/index.html
@@ -10,11 +10,7 @@
     <script src="https://use.typekit.net/dme1ptj.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="js/featherlight.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/featherlight/1.5.0/featherlight.min.css" type="text/css" rel="stylesheet"/>
-
-    <script src="js/timetable.min.js"></script>
-    <script src="js/clock.js"></script>
 </head>
 
 <style>
@@ -123,7 +119,7 @@
                     <h3>What will you do with my child's photos?</h3>
                     <p>The photos will be posted online and used for future advertisements of the event. They will not be named unless they win a prize.</p>
                     <h3>I need to talk to someone at the event</h3>
-                    <p>You can contact us at any point on: (+44) 7520647999 </p>
+                    <p>You can contact us at any point on: 0141 280 3548</p>
 
                 </p>
             </div>
@@ -147,13 +143,13 @@
                 </ul>
                 <h3>Security</h3>
                 <ul>
-                    <li><strong>Venue Security</strong> - Overnight security provided by the venue Millenium point will be roaming the venue throughout the event and will be on hand to assist in any safeguarding incidents. All security hold an enhanced DBS check.</li>
+                    <li><strong>Venue Security</strong> - Overnight security provided by the venue Millennium point will be roaming the venue throughout the event and will be on hand to assist in any safeguarding incidents. All security hold an enhanced DBS check.</li>
                     <li><strong>Wristbands</strong> - All attendees will be asked to display their HackTheMidlands wristbands when entering the building to stop non-attendees from accessing the event</li>
                     <li><strong>Door Locks</strong> - All building doors are locked overnight to make sure no one enters the building without authorisation</li>
                 </ul>
                 <h3>Sleeping</h3>
                 <ul>
-                    <li><strong>Seperate U18 Sleeping</strong> U18s will be given access to gender separate sleeping areas that are completely separated from adult sleeping areas by a wall. They may not sleep in the adult zones. The only adults who will have access to these spaces will be organisers and must enter in pairs. This space will be monitored externally at all times by someone close to the space.</li>
+                    <li><strong>Separate U18 Sleeping</strong> U18s will be given access to gender separate sleeping areas that are completely separated from adult sleeping areas by a wall. They may not sleep in the adult zones. The only adults who will have access to these spaces will be organisers and must enter in pairs. This space will be monitored externally at all times by someone close to the space.</li>
                 </ul>
                 <h3>Other</h3>
                 <ul>
@@ -175,9 +171,9 @@
             <h2>Contact</h2>
             <hr/>
             <h3>Emergencies</h3>
-            <p>In the event of an emergency, you can call us on (+44) 7520647999 and press 0</p>
+            <p>In the event of an emergency, you can call us on 0141 280 3548.</p>
             <h3>Other</h3>
-            <p>To talk to us, you can phone us on (+44 )7520647999-</p>
+            <p>To talk to us, you can phone us on 0141 280 3548</p>
             <p>Or Email us at hackthemidlands@gmail.com</p>
             <p>Secure email: hackthemidlands@protonmail.com</p>
             <br><br><br><br><br>
