Fix flag not being shown

--- a/tlch.html
+++ b/tlch.html
@@ -17,7 +17,7 @@ flag: HTM{wh47_H47H_g0D_Wr0UGh7}
     </p>
 
     <p>
-        <strong>{{ flag }}</strong>
+        <strong>{{ page.flag }}</strong>
     </p>
     <p>- Tom</p>
 </body>
