Added challenges, and some workshops

--- a/event-info.html
+++ b/event-info.html
@@ -105,7 +105,6 @@
                     None here yet!
                     Become a sponsor to have your challenge here!
                 </p>
-                <!--
                 <div class="sponsor-item">
                     <div class="sponsor-item-left">
                         <img src="images/sponsors/majestic.png" alt="Majestic"/>
@@ -113,19 +112,117 @@
                     <div class="sponsor-item-right">
                         <div class="sponsor-item-right-content">
                             <h3>Majestic Challenge</h3>
-                            <p>"I laughed out loud" (in a safe manner)</p>
+                            <p>"Corporate Friendly Giggles - Make us laugh in a safe millennial / genZ way</p>
                             <br>
                         </div>
                     </div>
                 </div>
-                -->
+                <div class="sponsor-item">
+                    <div class="sponsor-item-left">
+                        <img src="images/sponsors/capgemini.png" alt="Capgemini"/>
+                    </div>
+                    <div class="sponsor-item-right">
+                        <div class="sponsor-item-right-content">
+                            <h3>Capgemini Challenge</h3>
+                            <p>Most Inclusive Submission - Product with far reaching usage/availability
+                            <br>
+                        </div>
+                    </div>
+                </div>
+                <div class="sponsor-item">
+                    <div class="sponsor-item-left">
+                        <img src="images/sponsors/bcs.jpg" alt="BCS"/>
+                    </div>
+                    <div class="sponsor-item-right">
+                        <div class="sponsor-item-right-content">
+                            <h3>BCS Challenge</h3>
+                            <p>Most Good for Society
+                            <br>
+                        </div>
+                    </div>
+                </div>
+                <div class="sponsor-item">
+                    <div class="sponsor-item-left">
+                        <img src="images/sponsors/arm.png" alt="Arm" />
+                    </div>
+                    <div class="sponsor-item-right">
+                        <div class="sponsor-item-right-content">
+                            <h3>Arm Challenge</h3>
+                            <p>Best use of Arm IP
+                            <br>
+                        </div>
+                    </div>
+                </div>
+                <div class="sponsor-item">
+                    <div class="sponsor-item-left">
+                        <img src="images/sponsors/twilio.svg" alt="Twilio"/>
+                    </div>
+                    <div class="sponsor-item-right">
+                        <div class="sponsor-item-right-content">
+                            <h3>Twilio Challenge</h3>
+                            <p>Best Use of Twilio</p>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+                <div class="sponsor-item">
+                    <div class="sponsor-item-left">
+                        <img src="images/sponsors/bentley.png" alt="Bentley"/>
+                    </div>
+                    <div class="sponsor-item-right">
+                        <div class="sponsor-item-right-content">
+                            <h3>Bentley Challenge</h3>
+                            <p>Bentley EXP 100 Challenge</p>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+                <div class="sponsor-item">
+                    <div class="sponsor-item-left">
+                        <img src="images/sponsors/BJSS.png" alt="BJSS"/>
+                    </div>
+                    <div class="sponsor-item-right">
+                        <div class="sponsor-item-right-content">
+                            <h3>BJSS</h3>
+                            <p> Best AI Project that could benefit our society</p>
+                                <br>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="sponsor-item">
+                    <div class="sponsor-item-left">
+                        <img src="images/sponsors/BBM.png" alt="BBM"/>
+                    </div>
+                    <div class="sponsor-item-right">
+                        <div class="sponsor-item-right-content">
+                            <h3>Bought By Many Challenge</h3>
+                            <p>Cats Vs Dogs</p>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+                <div class="sponsor-item">
+                    <div class="sponsor-item-left">
+                        <img src="images/sponsors/webroot.png" alt="Webroot"/>
+                    </div>
+                    <div class="sponsor-item-right">
+                        <div class="sponsor-item-right-content">
+                            <h3>Webroot Challenge</h3>
+                            <p>Make the world a safer place by improving the safety or security of any lawful community or group. This could either be
+                            a specific group under threat (such as modern slavery victims or journalists reporting on organised crime) or the public
+                            at large (for example public transit users or the elderly).
+</p>
+                            <br>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
     </section>
 
     <style>
     p {
-        color: #dddddd;
+        color: #363636;
     }
     table {
         font-family: ingra, sans-serif;
@@ -176,7 +273,7 @@
                 </tr>
                 <tr>
                     <td>14:00</td>
-                    <td colspan="1">[A] Workshop 1</td>
+                    <td colspan="1">Twilio Workshop</td>
                     <td colspan="1"></td>
                 </tr>
                 <tr>
@@ -186,8 +283,8 @@
                 </tr>
                 <tr>
                     <td>16:00</td>
-                    <td colspan="1">[A] Workshop 3</td>
-                    <td colspan="1">[B] Workshop 1</td>
+                    <td colspan="1">Build a Synthesiser with Web Audio API</td>
+                    <td colspan="1">Google Cloud Platform Workshop</td>
                 </tr>
                 <tr>
                     <td>17:00</td>
