Fix discord links

--- a/event-info.html
+++ b/event-info.html
@@ -148,7 +148,7 @@
                     <div class="sponsor-item-right">
                         <div class="sponsor-item-right-content">
                             <h3>Arm Challenge</h3>
-                            <p>Best use of Arm IP
+                            <p>Best Use of Arm IP </p>
                             <br>
                         </div>
                     </div>
@@ -184,7 +184,7 @@
                     <div class="sponsor-item-right">
                         <div class="sponsor-item-right-content">
                             <h3>BJSS</h3>
-                            <p> Best AI Project that could benefit our society</p>
+                            <p> Best AI Project That Could Benefit Our Society</p>
                                 <br>
                             </div>
                         </div>
@@ -597,7 +597,7 @@
     }
 }
     </style>
-    <a href="https://discordapp.com/invite/ZtkhBm">
+    <a href="https://discord.gg/hackthemidlands">
         <div _ngcontent-c0="" class="discord" id="circle">
           <div _ngcontent-c0="" class="discord--box ng-trigger ng-trigger-discord" id="discord_thing" style="transform: scale(0);">
             <iframe _ngcontent-c0="" class="ng-tns-c0-0" allowtransparency="true" frameborder="0" height="500" src="https://discordapp.com/widget?id=304313295165325323&amp;theme=dark" width="350"></iframe>
