--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="social-links-header">
                 <a target="_blank" href="/tickets"><img id="logo" src="images/event-brite.png" /></a>
-                <a target="_blank" href="https://discord.gg/dHV72ND"><img id="logo" src="images/discord.svg" /></a>
+                <a target="_blank" href="https://discord.gg/hackthemidlands"><img id="logo" src="images/discord.svg" /></a>
                 <a target="_blank" href="https://www.facebook.com/hackthemidlands"><img id="logo" src="images/facebook.svg" /></a>
                 <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="logo" src="images/twitter.svg" /></a>
                 <a target="_blank" href="https://github.com/hackthemidlands/"><img id="logo" src="images/github.jpg" /></a>
@@ -291,7 +291,7 @@
                 <a target="_blank" href="https://www.github.com/hackthemidlands/"><img src="images/github.jpg"/></a>
                 <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="twitter" src="images/twitter.svg"/></a>
                 <a target="_blank" href="https://www.facebook.com/hackthemidlands"><img src="images/facebook.svg"/></a>
-                <a target="_blank" href="https://discord.gg/dHV72ND"><img src="images/discord.svg"/></a>
+                <a target="_blank" href="https://discord.gg/hackthemidlands"><img src="images/discord.svg"/></a>
                 <a target="_blank" href="/tickets"><img src="images/event-brite.png"/></a>
             </div>
         </footer>
