Fix discord invite link

--- a/event-info.html
+++ b/event-info.html
@@ -500,7 +500,7 @@
     }
 }
     </style>
-    <a href="https://discordapp.com/invite/ZtkhBm">
+    <a href="https://discord.gg/hackthemidlands">
         <div _ngcontent-c0="" class="discord" id="circle">
           <div _ngcontent-c0="" class="discord--box ng-trigger ng-trigger-discord" id="discord_thing" style="transform: scale(0);">
             <iframe _ngcontent-c0="" class="ng-tns-c0-0" allowtransparency="true" frameborder="0" height="500" src="https://discordapp.com/widget?id=304313295165325323&amp;theme=dark" width="350"></iframe>
