Fix buttons margin on mobile

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
                 <a href="https://live.hackthemidlands.com"><button id="apply-button">Announcements</button></a>
                 <a href="https://help.hackthemidlands.com"><button id="apply-button">Get Help</button></a>
                 <a href="https://ctf.hackthemidlands.com"><button id="apply-button">Capture The Flag</button></a>
-                <a href="sponsorship.pdf"><button id="sponsor-button">Sponsor Us</button></a>
+                <a href="sponsorship.pdf"><button id="apply-button">Sponsor Us</button></a>
+
                 <a href="https://www.youtube.com/watch?v=bakpTO7weKk"><h3 style="font-size: 15px; padding-top: 10px; font-weight: 500">Watch The Video!</h3></a>
             </div>
             <div class="social-links-header">
