--- a/event-info.html
+++ b/event-info.html
@@ -293,7 +293,7 @@
                 </tr>
                 <tr>
                     <td>18:00</td>
-                    <td colspan="1"></td>
+                    <td colspan="1">BJSS: Talk from Head of Innovation</td>
                     <td colspan="1">Bought By Many: Advantages and Challenges of running a microservice architecture</td>
                 </tr>
                 <tr>
@@ -306,7 +306,7 @@
                 </tr>
                 <tr>
                     <td>21:00</td>
-                    <td colspan="2">Quiplash</td>
+                    <td colspan="2">Horrible UX Mini Event, hosted by Majestic</td>
                 </tr>
                 <tr>
                     <td>22:00</td>
@@ -328,6 +328,10 @@
                 <tr>
                     <td>00:00</td>
                     <td colspan="2">Midnight Snack</td>
+                </tr>
+                <tr>
+                    <td>01:00</td>
+                    <td colspan="2">Quiplash</td>
                 </tr>
                 <tr>
                     <td>08:00</td>
