Updated GCP workshop title

--- a/event-info.html
+++ b/event-info.html
@@ -289,7 +289,7 @@
                 <tr>
                     <td>17:00</td>
                     <td colspan="1">Majestic: "Scala", The most beautiful programming language you've probably never used, with Majestic</td>
-                    <td colspan="1">Google Cloud Platform Workshop, with Justin Chadwell</td>
+                    <td colspan="1">Exploring ML with Google Cloud Platform, with Justin Chadwell</td>
                 </tr>
                 <tr>
                     <td>18:00</td>
