Updated title of BJSS talk

--- a/event-info.html
+++ b/event-info.html
@@ -293,7 +293,7 @@
                 </tr>
                 <tr>
                     <td>18:00</td>
-                    <td colspan="1">BJSS: Talk from Head of Innovation</td>
+                    <td colspan="1">BJSS: AI in Healthcare - Voice Assisted Living, with Tim Walpole - Head of Innovation</td>
                     <td colspan="1">Bought By Many: Advantages and Challenges of running a microservice architecture</td>
                 </tr>
                 <tr>
