Changed presentation to ceremony

--- a/event-info.html
+++ b/event-info.html
@@ -260,7 +260,7 @@
                 </tr>
                 <tr>
                     <td>11:00</td>
-                    <td colspan="2">Opening Presentation</td>
+                    <td colspan="2">Opening Ceremony</td>
                 </tr>
                 <tr>
                     <td>12:00</td>
