Add BJSS challenge link

--- a/event-info.html
+++ b/event-info.html
@@ -178,17 +178,18 @@
                     </div>
                 </div>
                 <div class="sponsor-item">
-                    <div class="sponsor-item-left">
-                        <img src="images/sponsors/BJSS.png" alt="BJSS"/>
-                    </div>
-                    <div class="sponsor-item-right">
-                        <div class="sponsor-item-right-content">
-                            <h3>BJSS</h3>
-                            <p> Best AI Project That Could Benefit Our Society</p>
+                    <a href="https://www.bjss.com/midlands/">
+                        <div class="sponsor-item-left">
+                            <img src="images/sponsors/BJSS.png" alt="BJSS"/>
+                        </div>
+                        <div class="sponsor-item-right">
+                            <div class="sponsor-item-right-content">
+                                <h3 style="color: black">BJSS</h3>
+                                <p> Best AI Project That Could Benefit Our Society</p>
                                 <br>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="sponsor-item">
                     <div class="sponsor-item-left">
