Add Capital One challenge to site

--- a/event-info.html
+++ b/event-info.html
@@ -213,7 +213,21 @@
                             <p>Make the world a safer place by improving the safety or security of any lawful community or group. This could either be
                             a specific group under threat (such as modern slavery victims or journalists reporting on organised crime) or the public
                             at large (for example public transit users or the elderly).
-</p>
+                            </p>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+                <div class="sponsor-item">
+                    <div class="sponsor-item-left">
+                        <img src="images/sponsors/capital-one.png" alt="Capital One"/>
+                    </div>
+                    <div class="sponsor-item-right">
+                        <div class="sponsor-item-right-content">
+                            <h3>Capital One Challenge</h3>
+                            <p>
+                                Change Banking For Good - Make the Best Financial Hack.
+                            </p>
                             <br>
                         </div>
                     </div>
