--- a/event-info.html
+++ b/event-info.html
@@ -289,7 +289,7 @@
                 <tr>
                     <td>14:00</td>
                     <td colspan="1">Bentley Motors Workshop</td>
-                    <td colspan="1"></td>
+                    <td colspan="1">Capital One on Test Driven Development</td>
                 </tr>
                 <tr>
                     <td>15:00</td>
