Rename MLH no light

--- a/event-info.html
+++ b/event-info.html
@@ -317,7 +317,7 @@
                 </tr>
                 <tr>
                     <td>20:00</td>
-                    <td colspan="2">Code in the Dark</td>
+                    <td colspan="2">MLH No Light</td>
                 </tr>
                 <tr>
                     <td>21:00</td>
