--- a/event-info.html
+++ b/event-info.html
@@ -14,7 +14,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/featherlight/1.5.0/featherlight.min.css" type="text/css" rel="stylesheet"/>
 
     <script src="js/timetable.min.js"></script>
-    <!-- <script src="js/clock.js"></script> -->
+    <script src="js/clock.js"></script>
 </head>
 
 <body>
@@ -61,19 +61,19 @@
                 <h1>You have:</h1>
                 <div id="countdown">
                     <div id="days">
-                        <span class="days">0</span>
+                        <span class="days"></span>
                         <h3>Days</h3>
                     </div>
                     <div id="hours">
-                        <span class="hours">0</span>
+                        <span class="hours"></span>
                         <h3>Hours</h3>
                     </div>
                     <div id="minutes">
-                        <span class="minutes">0</span>
+                        <span class="minutes"></span>
                         <h3>Minutes</h3>
                     </div>
                     <div id="seconds">
-                        <span class="seconds">0</span>
+                        <span class="seconds"></span>
                         <h3>Seconds</h3>
                     </div>
                 <h1>left</h1>
