corrected the timer label on index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <section id="event-countdown">
             <div class="container">
                 <img src="./images/confetti.png"/>
-                <h3>HackTheMidlands 4.0<br/><span>Will start in:</span></h3>
+                <h3>HackTheMidlands 4.0<br/><span>Will end in:</span></h3>
                 <div id="countdown">
                     <div>
                         <span class="days"></span>
