--- a/event-info.html
+++ b/event-info.html
@@ -61,19 +61,19 @@
                 <h1>You have:</h1>
                 <div id="countdown">
                     <div id="days">
-                        <span class="days"></span>
+                        <span class="days">0</span>
                         <h3>Days</h3>
                     </div>
                     <div id="hours">
-                        <span class="hours"></span>
+                        <span class="hours">0</span>
                         <h3>Hours</h3>
                     </div>
                     <div id="minutes">
-                        <span class="minutes"></span>
+                        <span class="minutes">0</span>
                         <h3>Minutes</h3>
                     </div>
                     <div id="seconds">
-                        <span class="seconds"></span>
+                        <span class="seconds">0</span>
                         <h3>Seconds</h3>
                     </div>
                 <h1>left</h1>
