--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <section id="event-countdown">
             <div class="container">
                 <img src="./images/confetti.png"/>
-                <h3>HackTheMidlands 4.0<br/><span>Will start in:</span></h3>
+                <h3>HackTheMidlands 5.0<br/><span id="countdown-description"></span></h3>
                 <div id="countdown">
                     <div>
                         <span class="days"></span>
