Slight changes to how the clock is initialised (#16)
* Slight changes to how the clock is initialised

deadline can be null to disable the clock.
description span is also set in the dom load event

* Remove ticket links

Having just clicked through all the ticket links, we need some templates...

--- a/event-info.html
+++ b/event-info.html
@@ -26,7 +26,6 @@
             <a href="/#event-info">About Us</a>
             <a href="/#sponsors">Sponsors</a>
             <a href="/#team">Team</a>
-            <a href="/tickets">Tickets</a>
             <a href="event-info.html">Event Information</a>
         </div>
     </div>
@@ -43,7 +42,6 @@
                     <a href="/#event-info">About Us</a>
                     <a href="/#sponsors">Sponsors</a>
                     <a href="/#team">Team</a>
-                    <a href="/tickets">Tickets</a>
                     <a href="event-info.html">Event Information</a>
                     <div class="nav-mobile"></div>
                 </div>
@@ -61,19 +59,19 @@
                 <h1>You have:</h1>
                 <div id="countdown">
                     <div id="days">
-                        <span class="days"></span>
+                        <span class="days">0</span>
                         <h3>Days</h3>
                     </div>
                     <div id="hours">
-                        <span class="hours"></span>
+                        <span class="hours">0</span>
                         <h3>Hours</h3>
                     </div>
                     <div id="minutes">
-                        <span class="minutes"></span>
+                        <span class="minutes">0</span>
                         <h3>Minutes</h3>
                     </div>
                     <div id="seconds">
-                        <span class="seconds"></span>
+                        <span class="seconds">0</span>
                         <h3>Seconds</h3>
                     </div>
                 <h1>left</h1>
