--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
             <a href="#event-info">About Us</a>
             <a href="#sponsors">Sponsors</a>
             <a href="#team">Team</a>
-            <a href="/tickets">Get Tickets</a>
             <a href="event-info.html">Event Information</a>
             <a href="/safeguarding">Safeguarding</a>
         </div>
@@ -68,7 +67,6 @@
                                 <a href="#event-info">About Us</a>
                                 <a href="#sponsors">Sponsors</a>
                                 <a href="#team">Team</a>
-                                <a href="/tickets">Get Tickets</a>
                                 <a href="event-info.html">Event Information</a>
                                 <a href="/safeguarding">Safeguarding</a>
                             </div>
@@ -86,7 +84,6 @@
                 <a href="https://www.youtube.com/watch?v=bakpTO7weKk"><h3 style="font-size: 15px; padding-top: 10px; font-weight: 500">Watch The Video!</h3></a>
             </div>
             <div class="social-links-header">
-                <a target="_blank" href="/tickets"><img id="logo" src="images/event-brite.png" /></a>
                 <a target="_blank" href="https://discord.gg/hackthemidlands"><img id="logo" src="images/discord.svg" /></a>
                 <a target="_blank" href="https://www.facebook.com/hackthemidlands"><img id="logo" src="images/facebook.svg" /></a>
                 <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="logo" src="images/twitter.svg" /></a>
@@ -97,7 +94,7 @@
         <section id="event-countdown">
             <div class="container">
                 <img src="./images/confetti.png"/>
-                <h3>HackTheMidlands 4.0<br/><span>Will start in:</span></h3>
+                <h3>HackTheMidlands 5.0<br/><span id="countdown-description"></span></h3>
                 <div id="countdown">
                     <div>
                         <span class="days"></span>
@@ -186,7 +183,6 @@
                 </div>
                 <h3>Join Us!</h3>
                 <p>Get your tickets now for HackTheMidlands and be guaranteed a spot in this year's hackathon!</p>
-                <a href="/tickets"><button>Get Tickets</button></a>
             </div>
             <div class="google-maps">
                 <div id="faq-slit-bottom"></div>
@@ -293,7 +289,6 @@
                 <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="twitter" src="images/twitter.svg"/></a>
                 <a target="_blank" href="https://www.facebook.com/hackthemidlands"><img src="images/facebook.svg"/></a>
                 <a target="_blank" href="https://discord.gg/hackthemidlands"><img src="images/discord.svg"/></a>
-                <a target="_blank" href="/tickets"><img src="images/event-brite.png"/></a>
             </div>
         </footer>
 
